# AI-Speech-App

./: .dockerignore  .gitignore  .instance-id  .instance-ip  CHANGES_APPLIED.md  Caddyfile  DEPLOY_AWS_OPTIMAL.md  DEPLOY_EC2_MICRO.md  DEPLOY_FLY.md  Dockerfile.fly  LAPTOP_BACKEND_VERCEL_FRONTEND.md  PROJECT_AUDIT.md  PROJECT_CONTEXT_FOR_AI.md  QUICK_DEPLOY.md  SCORING_METRICS_DOCUMENTATION.html  SCORING_METRICS_DOCUMENTATION.md  convert_md_to_html.py  convert_md_to_pdf.py  convert_to_pdf.py  convert_to_pdf_simple.py  docker-compose.yml  fly.toml  requirements-micro.txt  requirements.txt
app/: main.py
app/admin/: __init__.py  bulk_routes.py  export_routes.py  routes.py  schemas.py
app/api/: profile_routes.py  routes.py
app/asr/: groq_whisper.py  whisper_service.py
app/auth/: __init__.py  dependencies.py  models.py  routes.py
app/battles/: room_manager.py  routes.py  schemas.py  scoring.py
app/core/: config.py  livekit_client.py  llm_client.py  rate_limiter.py
app/data/: debate_motions.json  gd_topics.json
app/gd/: routes.py  (+6 more)
docker/: fly-start.sh
frontend/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: aws_manage.ps1  deploy.sh  download_model.py  ec2_setup.sh  fix_nginx_permissions.sh  nginx-prod.conf  run-ss3-local.ps1  softskills-backend.service  system_check.py  test_debate_scoring.py  test_groq_whisper.py  test_interview_scoring.py
ss3/: README.md  pyproject.toml
tests/: test_battle_multiround.py  test_debate_schemas.py  test_debate_scoring.py  test_llm_json_parsing.py  test_teammate3_features.py
(+81 files in other folders)
